--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,11 +57,14 @@ body {
   list-style-type: none;
   margin-left: 40px;
 }
+.navigation-item {
+  position: relative;
+}
 .navigation-logo {
   display: block;
   width: 138px;
   margin: 0% auto;
-  margin-right: 120px;
+  margin-right: 137px;
 }
 .navigation-user {
   display: flex;
@@ -70,9 +73,7 @@ body {
   margin-top: 14px;
 }
 .navigation-link {
-  position: relative;
   display: block;
-  margin: 19px 33px;
   line-height: 26px;
   font-weight: 700;
   text-decoration: none;
@@ -90,22 +91,17 @@ body {
 }
 .navigation-link-current::before {
   position: absolute;
-  left: -2px;
-  right: -5.14%;
-  top: 204.99%;
+  left: 30px;
+  right: 30px;
   bottom: 0;
   height: 2px;
   background-color: #756257;
   content: "";
 }
 .navigation-icon {
-  position: absolute;
-  left: 0%;
-  right: 0%;
-  top: -0.56%;
-  bottom: 0%;
-  margin: -7px -17px;
   fill: #000000;
+  padding: 10px 10px;
+  margin-top: 4px;
 }
 .navigation-icon:hover {
   stroke: #756257;
@@ -117,12 +113,7 @@ body {
   padding: 10px 10px;
 }
 .navigation-icon-favourite {
-  position: absolute;
-  left: 0%;
-  right: 0%;
-  top: -20.56%;
-  bottom: 0%;
-  margin: -16px -20px;
+  padding: 5px 8px;
 }
 .navigation-icon-favourite:hover {
   stroke: #756257;
@@ -132,7 +123,118 @@ body {
   outline: 3px solid #83b3d3;
   border-radius: 10px;
 }
+.popover {
+  position: absolute;
+  top: 57px;
+  left: -175px;
+  width: 400px;
+  min-height: 100px;
+  color: #000000;
+  background: #ffffff;
+  border: 1px solid #e6e6e6;
+  box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.15);
+  border-radius: 20px;
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 40px;
+  display: none;
+}
+.popover-content {
+  height: 100%;
+}
+.popover-item {
+  display: grid;
+  grid-template-columns: 25px 48px 17px 244px 41px 25px;
+  grid-template-rows: 24px 24px;
+  padding-top: 25px;
+}
+.popover-hotel {
+  grid-column: 2/3;
+}
+.hotel-name {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 40px;
+  margin: 0%;
+  padding: 0%;
+  grid-column: 4/5;
+}
+.hotel-type {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 40px;
+  margin: 0%;
+  padding: 0%;
+  grid-column: 4/5;
+}
+.popover-item-button {
+  grid-column: 5/6;
+  grid-row: 1/2;
+  margin: 0%;
+  padding: 0%;
+  background-color: transparent;
+  border: none;
+}
+.popover-item-button {
+  fill: #cfcdcd;
+}
+.popover-item-button:hover {
+  fill: #000000;
+}
+.popover-item-button:focus {
+  fill: #000000;
+  border: 3px solid #83b3d3;
+  border-radius: 10px;
+  height: 36px;
+}
+.popover-button-all {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #756257;
+  width: 400px;
+  height: 60px;
+  border-radius: 0px 0px 20px 20px;
+  border: none;
+  margin-top: 25px;
+  padding: 0%;
+}
+.popover-button-all:hover {
+  background-color: #615048;
+}
+.popover-button-all:focus {
+  background-color: #615048;
+  border: 3px solid #83b3d3;
+}
+.navigation-text {
+  padding: 19px 33px;
+}
+.navigation-serch {
+  margin-right: 20px;
+}
+.navigation-favourite {
+  position: relative;
+  margin-right: 10px;
+}
 .button-in {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  text-align: center;
+  text-decoration: none;
   padding: 9px 35px;
   border: none;
   border-radius: 4px;
@@ -307,16 +409,6 @@ body {
   margin-bottom: 73px;
   width: 480px;
 }
-.button {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 36px;
-  text-align: center;
-  text-decoration: none;
-  color: #ffffff;
-  background-color: #756257;
-}
 .newsletter {
   color: #ffffff;
   background-color: #000000;
@@ -383,6 +475,14 @@ body {
   border: none;
   border-radius: 10px 0px 0px 10px;
   padding-left: 22px;
+}
+.field:hover {
+  background-color: #e6e6e6;
+}
+.field:focus {
+  background-color: #e6e6e6;
+  outline: 3px solid #83b3d3;
+  border: none;
 }
 .button-newsletter-button {
   font-style: normal;
@@ -466,26 +566,15 @@ body {
 }
 .social-link {
   display: block;
-  height: 45px;
-  background-color: #83b3d3;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 20px 16px;
-  margin: auto;
-  margin-top: 45px;
+  margin-top: 35px;
+  margin-left: 35px;
+  fill: #83b3d3;
 }
-.social-link-tw {
-  background-image: url(../images/social-twitter.svg);
-}
-.social-link-fb {
-  background-image: url(../images/social-facebook.svg);
-}
-.social-link-yt {
-  background-image: url(../images/social-youtube.svg);
+.social-icon {
+  padding: 10px 10px;
 }
 .social-link:hover {
   fill: #68a2ca;
-  color: #6c9e42;
 }
 .social-link:focus {
   border: 3px solid #83b3d3;
@@ -493,6 +582,211 @@ body {
   fill: #68a2ca;
   width: 40px;
   height: 40px;
+}
+.modal-container {
+  position: fixed;
+  top: 0%;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background: rgba(242, 242, 242, 0.8);
+  display: none;
+}
+.modal {
+  position: relative;
+  margin: auto;
+  background: #ffffff;
+  box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.15);
+  border-radius: 30px;
+  padding: 70px;
+  width: 575px;
+}
+.appointment-form {
+  display: grid;
+  grid-template-columns: 155px 189px 54px 43px 133px;
+  grid-template-rows: 50px 40px 50px 40px 50px;
+}
+.modal-title {
+  margin: 0%;
+  padding: 0%;
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 40px;
+  text-transform: uppercase;
+  margin-bottom: 62px;
+}
+.modal-date {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 40px;
+  color: #000000;
+  background: #f2f2f2;
+  border-radius: 4px;
+  width: 401px;
+  background-image: url(../images/date.svg);
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+  padding-left: 19px;
+  border: none;
+  grid-column: 2/6;
+  grid-row: 1/2;
+}
+.modal-date-out {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 40px;
+  color: #000000;
+  background: #f2f2f2;
+  border-radius: 4px;
+  width: 401px;
+  background-image: url(../images/date.svg);
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+  padding-left: 19px;
+  border: none;
+  grid-column: 2/6;
+  grid-row: 3/4;
+}
+.modal-humans {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 40px;
+  background: #f2f2f2;
+  border-radius: 4px;
+  width: 133px;
+  border: none;
+}
+.modal-close-button {
+  position: absolute;
+  width: 53px;
+  height: 53px;
+  right: 70px;
+  top: 54px;
+  background: #f2f2f2;
+  background-image: url(../images/Vector.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+  border-radius: 50%;
+}
+.modal-close-button:hover {
+  background-color: #e6e6e6;
+}
+.modal-close-button:focus {
+  background-color: #e6e6e6;
+  border: 3px solid #83b3d3;
+}
+.modal-label {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 40px;
+}
+.modal-label-out {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 40px;
+  grid-column: 1/2;
+  grid-row: 3/4;
+}
+.modal-label-old {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 40px;
+  grid-column: 1/2;
+  grid-row: 5/6;
+}
+.modal-label-kids {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 40px;
+  grid-column: 3/4;
+  grid-row-start: 5/6;
+}
+.arrival-required {
+  margin: 0%;
+  padding: 0%;
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 40px;
+  color: #ff5757;
+  background-color: #ffffff;
+  grid-column: 2/6;
+  grid-row: 2/3;
+}
+.departure-required {
+  margin: 0%;
+  padding: 0%;
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 40px;
+  color: #000000;
+  background-color: #ffffff;
+  grid-column: 2/6;
+  grid-row: 4/5;
+}
+.button-info {
+  position: relative;
+  top: 10px;
+  right: -2px;
+  width: 25px;
+  height: 25px;
+  background-color: #83b3d3;
+  border: none;
+  padding: 0%;
+  margin: 0%;
+  border-radius: 50%;
+}
+.modal-humans-old {
+  grid-column: 2/3;
+  grid-row: 5/6;
+}
+.modal-humans-kids {
+  grid-column: 5/6;
+  grid-row: 5/6;
+}
+.modal-button-serch {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 40px;
+  text-transform: uppercase;
+  color: #ffffff;
+  background: #83b3d3;
+  border-radius: 10px;
+  width: 575px;
+  height: 60px;
+  margin-top: 40px;
+  border: none;
+}
+.modal-button-serch:hover {
+  background: #68a2ca;
+}
+.modal-button-serch:focus {
+  background: #68a2ca;
+  border: 3px solid #756257;
+  border-radius: 10px;
 }
 .main-inner {
   color: #ffffff;
@@ -531,7 +825,23 @@ body {
   list-style-type: none;
 }
 .breadcrumbs-name {
-  margin-left: 30px;
+  margin-left: 10px;
+}
+.breadcrumbs-home {
+  fill: #ffffff;
+}
+.breadcrumbs-vector {
+  fill: white;
+  opacity: 0.6;
+  padding-left: 10px;
+}
+.breadcrumbs-home:hover {
+  color: #ffffff;
+  opacity: 0.6;
+}
+.breadcrumbs-home:focus {
+  border: 3px solid #83b3d3;
+  border-radius: 4px;
 }
 .catalog-hotels {
   padding-bottom: 83px;
@@ -547,6 +857,60 @@ body {
   width: 150px;
   margin-right: 67px;
   padding: 0%;
+  border: none;
+}
+.catalog-filter-list {
+  list-style-type: none;
+  padding: 0%;
+}
+.control {
+  position: relative;
+  display: block;
+  padding-left: 40px;
+}
+.control-mark {
+  position: absolute;
+  left: 0%;
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
+  border-radius: 4px;
+}
+.control:hover .control-mark {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+.control-input[type="checkbox"]:checked + .control-mark::before {
+  position: absolute;
+  top: 10px;
+  left: 5px;
+  background-color: #3f5e72;
+  width: 11px;
+  height: 2px;
+  content: "";
+  transform: rotate(-50deg);
+}
+.control-input[type="checkbox"]:checked + .control-mark::after {
+  position: absolute;
+  top: 12px;
+  left: 3px;
+  background-color: #3f5e72;
+  width: 6px;
+  height: 2px;
+  content: "";
+  transform: rotate(45deg);
+}
+.control-input[type="radio"] + .control-mark {
+  border-radius: 50%;
+}
+.control-input[type="radio"]:checked + .control-mark::before {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 10px;
+  height: 10px;
+  content: "";
+  background-color: #3f5e72;
+  border-radius: 50%;
 }
 .catalog-filter-type {
   font-family: "PT Sans";
@@ -555,17 +919,17 @@ body {
   font-size: 18px;
   line-height: 23px;
   width: 150px;
-  margin-right: 167px;
+  margin-right: 153px;
   padding: 0%;
+  border: none;
+  list-style-type: none;
 }
 .catalog-filter-price {
   width: 288px;
   margin: 0%;
   padding: 0%;
+  border: none;
   margin-right: 81px;
-  display: grid;
-  grid-template-columns: 144px 144px;
-  gap: 20px 0px;
 }
 .catalog-filter-title {
   font-style: normal;
@@ -585,7 +949,92 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 23px;
-  text-align: right;
+  width: 139.5px;
+  height: 48px;
+  border: 2px solid #ffffff;
+  padding: 0%;
+  background-color: transparent;
+}
+.input-min {
+  border-radius: 4px 0 0 4px;
+  color: #ffffff;
+  text-indent: 19px;
+}
+.input-min:hover {
+  opacity: 0.6;
+}
+.input-min:focus {
+  box-shadow: 0px 0px 0px 3px #81b3d2;
+  border: 2px solid #ffffff;
+  outline: none;
+}
+.input-min:active {
+  background: #756257;
+  border: 2px solid #ffffff;
+  outline: none;
+}
+.input-max {
+  border-radius: 0 4px 4px 0;
+  color: #ffffff;
+  text-indent: 17px;
+}
+.input-max:hover {
+  opacity: 0.6;
+}
+.input-max:focus {
+  box-shadow: 0px 0px 0px 3px #81b3d2;
+  border: 2px solid #ffffff;
+  outline: none;
+}
+.input-max:active {
+  background: #756257;
+  border: 2px solid #ffffff;
+  outline: none;
+}
+.catalog-filter-input::-webkit-inner-spin-button,
+.catalog-filter-input::-webkit-outer-spin-button {
+  appearance: none;
+  margin: 0%;
+}
+.range-wrapper-inputs {
+  display: flex;
+  justify-content: center;
+  background-color: transparent;
+}
+.range-scale {
+  position: relative;
+  height: 4px;
+  margin-top: 32px;
+  background-color: #9b9898;
+}
+.range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #ffffff;
+}
+.range-toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+}
+.range-toggle:hover {
+  background-color: #756257;
+}
+.range-toggle:focus {
+  border: 3px solid #83b3d3;
+  background-color: #ffffff;
+}
+.toggle-min {
+  top: -8px;
+  left: 207px;
+}
+.toggle-max {
+  top: -8px;
+  left: -1px;
 }
 .button-column {
   margin: 0%;
@@ -630,6 +1079,10 @@ body {
   border: 2px solid #e6e6e6;
   border-radius: 4px;
   margin-right: 8px;
+}
+.card-grid-toggle-current {
+  border: 2px solid #000000;
+  border-radius: 4px;
 }
 .card-grid-toggle:hover {
   border: 2px solid #83b3d3;
@@ -681,7 +1134,7 @@ body {
   color: #000000;
   background-color: #e5e5e5;
   display: grid;
-  grid-template-rows: 60px min-content auto auto min-content min-content min-content;
+  grid-template-rows: 30px 23px 30px 37px;
   grid-template-columns: 72px 180px 36px 151px 8px 160px 361px 160px 72px;
 }
 .hotel-card-list {
@@ -714,6 +1167,37 @@ body {
   padding-top: 50px;
   padding-bottom: 45px;
 }
+.select-type {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 287px;
+}
+.select-control {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+  width: 100%;
+  padding-right: 94px;
+  padding: 13px 19px;
+  border: 2px solid #e6e6e6;
+  border-radius: 4px;
+  background-image: url(../images/dropdown\ 1.svg);
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+  appearance: none;
+}
+.select-control:hover {
+  border: 2px solid #83b3d3;
+  border-radius: 4px;
+}
+.select-control:focus {
+  border: 2px solid #83b3d3;
+  border-radius: 4px;
+  outline: none;
+}
 .hotel-card-link {
   font-style: normal;
   font-weight: 700;
@@ -741,7 +1225,18 @@ body {
   grid-column: 6/7;
 }
 .button-more {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #756257;
   grid-column: 4/5;
+  grid-row: 4/5;
   border: none;
   border-radius: 4px;
   padding: 5px 10px;
@@ -754,9 +1249,17 @@ body {
   outline: 3px solid #83b3d3;
 }
 .button-favorite {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  text-align: center;
+  text-transform: uppercase;
   color: #ffffff;
   background-color: #83b3d3;
   grid-column: 6/7;
+  grid-row: 4/5;
   border: none;
   border-radius: 4px;
 }
@@ -768,9 +1271,17 @@ body {
   outline: 3px solid #756257;
 }
 .button-in-favorite {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  text-align: center;
+  text-transform: uppercase;
   color: #ffffff;
   background-color: #7db54f;
   grid-column: 6/7;
+  grid-row: 4/5;
   border: none;
   border-radius: 4px;
 }
@@ -785,6 +1296,7 @@ body {
   color: #000000;
   background-color: #f2f2f2;
   grid-column: 8/9;
+  grid-row: 4/5;
   border: none;
   border-radius: 4px;
 }
@@ -882,19 +1394,43 @@ body {
   margin: 0%;
   margin-left: auto;
 }
-.select-control {
+.sorting-number-label {
   margin: 0%;
-  padding: 13px 127px 13px 19px;
-  border: none;
-  border-radius: 4px;
-  width: 287px;
+  padding: 0%;
+  margin-left: 301px;
+  margin-top: 13px;
+}
+.select-number {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 160px;
+  margin-right: auto;
 }
 .select-control-amount {
-  margin: 0%;
-  padding: 13px 133px 13px 17px;
-  border: none;
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+  width: 100%;
+  padding-right: 100px;
+  padding: 13px 17px;
+  border: 2px solid #e6e6e6;
   border-radius: 4px;
-  margin-left: 51px;
+  background-image: url(../images/dropdown\ 1.svg);
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+  appearance: none;
+}
+.select-control-amount:hover {
+  border: 2px solid #83b3d3;
+  border-radius: 4px;
+}
+.select-control-amount:focus {
+  border: 2px solid #83b3d3;
+  border-radius: 4px;
+  outline: none;
 }
 .newsletter-title-inner {
   font-style: normal;
