--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,16 +57,20 @@ body {
   padding: 0%;
   list-style-type: none;
   margin-left: 54px;
-  margin-top: 25px;
+  margin-top: 18px;
 }
 .navigation-item {
   position: relative;
 }
 .navigation-logo {
-  display: block;
   width: 138px;
   margin: 0% auto;
   margin-right: 145px;
+  padding-bottom: 65px;
+}
+.page-header-logo {
+  position: absolute;
+  z-index: 1;
 }
 .navigation-user {
   display: flex;
@@ -104,7 +108,7 @@ body {
 }
 .navigation-icon {
   fill: #000000;
-  margin-top: 6px;
+  margin-top: 8px;
 }
 .navigation-icon:hover {
   stroke: #756257;
@@ -231,6 +235,8 @@ body {
   position: relative;
 }
 .button-in {
+  box-sizing: border-box;
+  display: block;
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 700;
@@ -239,21 +245,22 @@ body {
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
-  padding: 6px 35px;
-  border: none;
+  padding: 6px 33px;
+  border: 3px solid transparent;
   border-radius: 4px;
   color: #ffffff;
   background-color: #756257;
-  margin-right: 71px;
-  margin-left: 8px;
+  margin-right: 72px;
+  margin-left: 5px;
 }
 .button-in:hover {
   background-color: #615048;
 }
 .button-in:focus {
   background: #615048;
-  outline: 3px solid #83b3d3;
+  border: 3px solid #83b3d3;
   border-radius: 10px;
+  padding: 6px 33px;
 }
 .main-container {
   flex-grow: 1;
@@ -520,7 +527,6 @@ body {
   padding: 0%;
   display: flex;
   width: 800px;
-  margin-left: -40px;
 }
 .field {
   font-style: normal;
